set up devise and ran db migrate to heroku

--- a/app/assets/stylesheets/bootstrap and customization.css.scss
+++ b/app/assets/stylesheets/bootstrap and customization.css.scss
@@ -1,7 +1,40 @@
-
-
+$body-bg: #ecf0f1;
+$font-family-sans-serif:'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height: 40px;
+$navbar-default-bg: #95a5a6;
+$navbar-default-brand-color: #000000;
+$brand-primary: blue;
+$brand-warning: orange;
+$brand-danger: red;
+$brand-success: green;
 
 
 @import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
