--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,7 +56,7 @@
 
 
 <!-- footer nav buttons -->
-<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+<nav class="navbar navbar-default  navbar-fixed-bottom" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-footer">
@@ -70,12 +70,15 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <a href="orders"class="btn btn-default">Orders</a>
         <a href="handP" class="btn btn-primary">History&Physical</a>
-        <a href="orders"class="btn btn-warning">Orders</a>
+        <a href="progress" class="btn btn-warning">Progress Notes</a>
         <a href="meds" class="btn btn-danger">Meds</a>
-        <a href="nursing" class="btn btn-primary">Nursing</a>
+        <a href="nursing" class="btn btn-success">Nursing</a>
         <a href="labs" class="btn btn-default">Labs</a>
-        <a href="progress" class="btn btn-success">Progress Notes</a>
+        <a href="imaging" class="btn btn-danger">Imaging</a>
+        
+        
         <!--<a href="#" class="btn btn-success">Success</a>
         <a href="#"class="btn btn-info">Info</a>
         <a href="#"class="btn btn-warning">Warning</a>
